frontend/test/should_fail/index_003_incidence_count_element_argument_mismatch.grg
#using "index_model_003.gm"

test indexaccess {
	n:N;
	
	if{ countFromIndex(bar, n)==42; }
}
